<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


<!--    search-->
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/search"
        android:title="@string/title_dashboard" />

<!--    profile-->
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_logout_24" />

</menu>