<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.activity.SurveyPreferenceActivity">

    <LinearLayout
        android:id="@+id/surveyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/pilih_kategori_minat_wisata"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonAgrowisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/agrowisata" />

            <RadioButton
                android:id="@+id/radioButtonAlam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/alam" />

            <RadioButton
                android:id="@+id/radioButtonBelanja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/belanja" />

            <RadioButton
                android:id="@+id/radioButtonBudaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/budaya" />

            <RadioButton
                android:id="@+id/radioButtonCagarAlam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/cagarAlam" />

            <RadioButton
                android:id="@+id/radioButtonPantai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/pantai" />

            <RadioButton
                android:id="@+id/radioButtonRekreasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/rekreasi" />

            <RadioButton
                android:id="@+id/radioButtonReligius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/religius" />
        </RadioGroup>

        <!--        <CheckBox-->
<!--            android:id="@+id/checkBoxAgrowisata"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/agrowisata" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxAlam"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/alam" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxBelanja"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/belanja" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxBudaya"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/budaya" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxCagarAlam"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/cagarAlam" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxPantai"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/pantai" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxRekreasi"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/rekreasi" />-->

<!--        <CheckBox-->
<!--            android:id="@+id/checkBoxReligius"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/religius" />-->

        <Button
            android:id="@+id/buttonSubmit"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/dapatkan_rekomendasi" />
    </LinearLayout>

    <!-- Hasil Rekomendasi -->
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:visibility="gone" />

<!--    <TextView-->
<!--        android:id="@+id/title_text"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:text="@string/looking_preference"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:fontFamily="sans-serif"-->
<!--        android:textAlignment="center" />-->

<!--    <Button-->
<!--        android:id="@+id/nature_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/title_text"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:drawableStart="@drawable/ic_leaf"-->
<!--        android:text="Nature"-->
<!--        android:textSize="18sp"-->
<!--        android:backgroundTint="@color/green"-->
<!--        android:layout_marginBottom="10dp" />-->

<!--    <Button-->
<!--        android:id="@+id/social_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/nature_button"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:drawableStart="@drawable/ic_social"-->
<!--        android:text="Social"-->
<!--        android:textSize="18sp"-->
<!--        android:backgroundTint="@color/blue"-->
<!--        android:layout_marginBottom="10dp" />-->

<!--    <Button-->
<!--        android:id="@+id/culinary_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/social_button"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:drawableStart="@drawable/ic_culinary"-->
<!--        android:text="Culinary"-->
<!--        android:textSize="18sp"-->
<!--        android:backgroundTint="@color/brown"-->
<!--        android:layout_marginBottom="10dp" />-->


    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_next"
        android:padding="16dp" />

</RelativeLayout>